<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:context="unifar.unifar.qandamaker.ExamDialogFragment">

    <RadioGroup
        android:id="@+id/examMode"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.30"
        >
    <RadioButton
        android:id="@+id/random"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/random" />
    <RadioButton
        android:id="@+id/recommended"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/recommended" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.50"
        android:weightSum="1"
        android:orientation="horizontal">

        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:scrollbarSize="40dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/qusstion"
            android:layout_gravity="center"
            style="@style/AppTheme.displayJapaneseTextView.1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="0.20"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/close_Button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/close" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/ok_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
