<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/questionListItemsParent"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:weightSum="1">

    <ImageView
        android:id="@+id/questionResult"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/evalution"
        android:gravity="center|start"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp" />

    <TextView
        android:id="@+id/textview_questionListItem"
        style="@style/AppTheme.normalJapaneseTextView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:gravity="center|start"
        android:text="@string/placeholder" />

    <ImageView
        android:id="@+id/editOnQuestionList"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:contentDescription="@string/test"
        android:gravity="center|start"
        app:srcCompat="@drawable/ic_mode_edit_black_48dp" />


</LinearLayout>