<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:weightSum="1"
    android:id="@+id/resultsContainer"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewCorrect"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:textColor="@color/colorCollect"
        android:alpha="1.0"
        style="@style/AppTheme.displayJapaneseTextView.1"
        android:gravity="center|center_horizontal"
        android:text="@string/correct"
        />

    <TextView
        android:id="@+id/textViewResult"
        style="@style/AppTheme.displayJapaneseTextView.3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:alpha="1.0"
        android:gravity="center|center_horizontal"
        android:text="@string/placeholder"
        android:textColor="@color/colorCollect" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adViewOnExamFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="MEDIUM_RECTANGLE"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"

        />

    <Button
        android:id="@+id/buttonFinish"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_gravity="bottom"
        android:text="@string/finish"
        android:textSize="60sp"
        android:textStyle="normal" />
</LinearLayout>