<?xml version="1.0" encoding="utf-8"?>

    <android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/mainactivity"
    android:orientation="vertical"
    >


        <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        app:elevation="6dp"
        app:layout_anchor="@+id/activityMain_relativeLayout"
        app:layout_anchorGravity="bottom|right"
            app:srcCompat="@android:drawable/ic_input_add" />

    <ImageView
        android:id="@+id/imageViewHeader"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/test"/>


    <RelativeLayout
        android:id="@+id/activityMain_relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            />
        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:headerDividersEnabled="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_below="@+id/toolbar" />

        <TextView
            android:id="@+id/emptyMessageOnMain1mk2"
            style="@style/AppTheme.displayJapaneseTextView.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:text="@string/emptyOnMain1" />

        <TextView
            android:id="@+id/emptyMessageOnMain2mk2"
            style="@style/AppTheme.displayJapaneseTextView.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:text="@string/emptyOnMain2" />


    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>

